--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Start of General CSS */
 :root {
     --bs-table-bg: #F8F9FA;
     --main-color: #FEC260;
@@ -15,6 +16,16 @@
     color: var(--main-text-color);
 }
 
+body {
+    background-color: #F7ECDE;
+    color: var(--main-text-color);
+    font-family: primary, sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    padding: 48px 0;
+}
+
 @font-face {
     font-family: primary;
     src: url(./../fonts/PT_Sans_Caption/PTSansCaption-Regular.ttf);
@@ -30,16 +41,9 @@
     src: url(./../fonts/Righteous/Righteous-Regular.ttf);
 }
 
-body {
-    background-color: #F7ECDE;
-    color: var(--main-text-color);
-    font-family: primary, sans-serif;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
-    padding: 48px 0;
-}
+/* End of General CSS */
 
+/* Start of Header */
 h1 {
     color: var(--secondary-text-color);
     font-family: h1, cursive;
@@ -57,7 +61,7 @@ h1::before {
     content: "";
     position: absolute;
     left: 0;
-    bottom: 5px;
+    bottom: 10px;
     background-color: var(--main-color);
     width: 100%;
     height: 25%;
@@ -73,6 +77,9 @@ h1:hover::before {
     height: 50%;
 }
 
+/* End of Header */
+
+/* Start of Inputs */
 .main-form {
     border-width: 2px 0px;
     border-style: dotted;
@@ -124,7 +131,8 @@ input.form-control:focus {
 }
 
 .btn-submit {
-    padding: 6px 48px;
+    --bs-btn-padding-x: 3rem;
+    --bs-btn-padding-y: .375rem;
     --bs-btn-color: var(--bg-main-color);
     --bs-btn-bg: var(--btn-submit-color);
     --bs-btn-border-color: var(--btn-submit-color);
@@ -135,6 +143,9 @@ input.form-control:focus {
     margin: auto;
 }
 
+/* End of Inputs */
+
+/* Start of Table */
 table {
     vertical-align: middle !important;
 }
@@ -182,12 +193,23 @@ button.btn-delete::before {
     padding-right: 5px;
 }
 
+/* End of Table */
+
+/* Start of Warning-Box */
 .warning-box {
-    font-family: "Bree Serif",serif;
+    font-family: "Bree Serif", serif;
     color: var(--secondary-text-color);
     font-size: 21px;
     line-height: 27.3px;
     font-weight: 400;
+}
+
+#modal {
+    background: rgba(0, 0, 0, 0.4);
+}
+
+#modal.show {
+    display: flex;
 }
 
 .warning-box .modal-header {
@@ -225,3 +247,5 @@ button.btn-delete::before {
     padding-right: 5px;
     color: var(--warning-icons);
 }
+
+/* End of Warning-Box */
